[gd_scene load_steps=7 format=2]

[ext_resource path="res://Projectiles/FlamethrowerFireNew.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/pixel_circle.png" type="Texture" id=2]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.607955 ), 0.0, 0.0, 0, 0, Vector2( 0.248, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.844, 0.995454 ), 0.0, 0.0, 0, 0, Vector2( 0.956, 0.498864 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.0796646, 0.255765, 0.528302, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.92549, 0.25098, 1, 1, 0.643375, 0.330244, 1, 1, 0.282353, 0.282353, 1, 0.705882, 0, 0.333333, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.54, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.227272, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.0796646, 0.255765, 0.528302, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.92549, 0.25098, 1, 1, 0.643375, 0.330244, 1, 1, 0.282353, 0.282353, 1, 0.705882, 0, 0.333333, 1 )

[node name="FlamethrowerFireNew" type="RayCast2D"]
enabled = true
cast_to = Vector2( 192, 0 )
script = ExtResource( 1 )

[node name="Line" type="Line2D" parent="."]
visible = false
scale = Vector2( 1.00201, 0.980583 )
points = PoolVector2Array( 0, 0, 23.9519, 0 )
width = 15.0
default_color = Color( 1, 0.592157, 0.0117647, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ImpactParticles" type="CPUParticles2D" parent="."]
visible = false
emitting = false
local_coords = false
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 120.0

[node name="CastingParticles" type="CPUParticles2D" parent="."]
modulate = Color( 6, 1.8, 1.8, 1 )
amount = 32
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 4.0
gravity = Vector2( 0, 0 )
initial_velocity = 192.0
scale_amount = 2.8
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 4 )

[node name="BeamParticles" type="CPUParticles2D" parent="."]
visible = false
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 150
lifetime = 0.8
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
spread = 67.24
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
angular_velocity = 1.0
scale_amount = 2.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 6 )
